--- a/2.html
+++ b/2.html
@@ -13,6 +13,10 @@
   </ol>
   <h2>CSS</h2>
   <p>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/7T7r_oSp0SE"
+     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+     gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
 </body>
 </html>
